--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.7.1",
+    "react-model": "^4.2.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
     "react-spreadsheet": "^0.7.7",
     "react-table": "^7.8.0",
+    "reactjs-popup": "^2.0.5",
     "scheduler": "^0.23.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
