--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.7.1",
     "react-model": "^4.2.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
     "react-spreadsheet": "^0.7.7",
